--- a/UserData_webapi/appsettings.json
+++ b/UserData_webapi/appsettings.json
@@ -16,5 +16,11 @@
     "linenotifyToken": "qbL7DTKmWu43hrI7viHgbpsqKSlcb0cQeVlXFBhO0Xy",
     "speechKey": "2fc381cc23d7455dbacea843f942cfea",
     "speechDomain": "eastus"
+  },
+  "azurekey": {
+    "facekey": "c968eaf96ab74ba8b4fc91ee0925f934"
+  },
+  "azureendpoint": {
+    "faceendpoint": "https://frcfaceapi.cognitiveservices.azure.com/"
   }
 }
