--- a/UserData_webapi/appsettings.json
+++ b/UserData_webapi/appsettings.json
@@ -16,17 +16,16 @@
     "linenotifyToken": "qbL7DTKmWu43hrI7viHgbpsqKSlcb0cQeVlXFBhO0Xy",
     "speechKey": "2fc381cc23d7455dbacea843f942cfea",
     "speechDomain": "eastus"
-  }
+  },
   "face++": {
-    "API Key": "WlEkj6-hbJWSB3PepCqo0zSYBd8xOR20\t",
+    "API Key": "hbJWSB3PepCqo0zSYBd8xOR20",
     "API Secret": "o5iTzgcFQpq5e_S0ngQFsC4EtU4xyAPF",
     "faceset_token": "1b51b60f3dbf9b32f53912215379596e",
     "Search": "https://api-us.faceplusplus.com/facepp/v3/search",
     "FaceSet": {
       "Create": "https://api-us.faceplusplus.com/facepp/v3/faceset/create",
       "AddFaceAsync": "https://api-us.faceplusplus.com/facepp/v3/faceset/async/addface",
-      "RemoveFaceAsync": "https://api-us.faceplusplus.com/facepp/v3/faceset/removeface",
-      "Update": "https://api-us.faceplusplus.com/facepp/v3/faceset/update"
+      "RemoveFaceAsync": "https://api-us.faceplusplus.com/facepp/v3/faceset/removeface"
     }
   }
 }
