--- a/UserData_webapi/UserData_webapi.csproj
+++ b/UserData_webapi/UserData_webapi.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.SimpleEmail" Version="3.7.0.194" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.43" />
     <PackageReference Include="LineBotSDK" Version="2.8.35" />
     <PackageReference Include="log4net" Version="2.0.15" />
